# callosum

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: default.yml  lint-flake8.yml  typecheck-mypy.yml
benchmarks/: README.md  __main__.py  cli.py
benchmarks/core/: config.py  metrics.py  profiler.py  runner.py
benchmarks/fixtures/: client.py  server.py
benchmarks/reporters/: console.py  html.py
benchmarks/scenarios/: base.py  features.py  latency.py  throughput.py
benchmarks/utils/: auth_helpers.py  payload.py  statistics.py
callosum/: __init__.py  abc.py  auth.py  compat.py  eventmessage.py  exceptions.py  message.py  ordering.py  peer.py  pubsub_message.py  rpc_message.py
callosum/lower/: __init__.py  dispatch_redis.py  distribute_redis.py  redis.py  rpc_redis.py  zeromq.py
callosum/rpc/: __init__.py  thrift.py
callosum/upper/: __init__.py  thrift.py
changes/: 12.fix  13.fix  14.deprecation  14.feature  14.fix  15.feature  16.fix  17.feature  18.fix  20.fix.md  21.feature.md  24.fix.md  26.misc.md  27.fix.md  28.fix.md  template.md
examples/: echo-client.py  echo-server.py  ordering-by-exit-server.py  ordering-by-key-server.py  ordering-client.py  ordering-server.py  simple-client-redis.py  simple-client-thrift.py  simple-client.py  simple-consumer-redis.py  simple-publisher-redis.py  simple-server-redis.py  simple-server-thrift.py  simple-server.py  simple-subscriber-redis.py  simple.thrift
requirements/: dev.txt
scripts/: determine-release-type.py  extract-release-changelog.py  run-integration-tests.sh
src/callosum/: __init__.py  abc.py  auth.py  compat.py  exceptions.py  io.py  ordering.py  peer.py  serial.py  serialize.py
src/callosum/lower/: __init__.py  dispatch_redis.py  redis_common.py  rpc_redis.py  zeromq.py
src/callosum/pubsub/: __init__.py  channel.py  message.py  types.py
src/callosum/rpc/: __init__.py  abc.py  channel.py  exceptions.py  message.py  types.py
src/callosum/upper/: __init__.py  thrift.py
tests/: test_auth.py  test_peer.py  test_rpc.py  test_serial.py
