[metadata]
name = callosum
version = attr: callosum.__version__
author = Lablup Inc.
author_email = devops@lablup.com
maintainer = Joongi Kim
maintainer_email = joongi@lablup.com
description = Callosum RPC Library
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
keywords = asyncio, rpc, pubsub, messaging
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Communications
    Topic :: Internet
platforms = POSIX
download_url = https://pypi.org/project/callosum
project_urls =
    Homepage = https://github.com/lablup/callosum
    Repository = https://github.com/lablup/callosum
    Issues = https://github.com/lablup/callosum/issues
    Changelog = https://github.com/lablup/callosum/blob/main/CHANGES.md

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    attrs>=21.3.0
    python-dateutil>=2.8.2
    msgpack>=1.0.7
    temporenc>=0.1
    yarl>=1.8.2,!=1.9.0,!=1.9.1,!=1.9.2
zip_safe = false
include_package_data = true

[options.packages.find]
where = src

[options.extras_require]
build =
    build>=1.0.3
    wheel>=0.41.0
    twine~=4.0
    towncrier~=22.12
test =
    Click>=8.0
    pytest~=7.2.2
    pytest-asyncio~=0.21
    pytest-cov>=4.0
    pytest-mock>=3.10
    codecov>=2.1
dev =
    pre-commit
lint =
    ruff>=0.2.2
    ruff-lsp>=0.0.52
typecheck =
    mypy~=1.8.0
    types-python-dateutil
docs =
    sphinx~=4.3
    sphinx-autodoc-typehints
thrift =
    thriftpy2>=0.4.20
zeromq =
    pyzmq>=25.1.1
redis =
    redis>=4.6.0
snappy =
    python-snappy>=0.6.1

[bdist_wheel]
universal = false
